--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Data
 
 DATABASE_PATH=./temp_scheduling_environment_database/scheduling_environment.json
-EXCEL_DUMP_DIRECTORY=./data_processing/excel_dumps/
+EXCEL_DUMP_DIRECTORY=./xlsx_dumps/
 ORDINATOR_INPUT=./configuration/baptiste_data_locations.toml 
 
 # Ordinator
