--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Data
-
-DATABASE_PATH=./temp_scheduling_environment_database/scheduling_environment.json
-EXCEL_DUMP_DIRECTORY=./xlsx_dumps/
-ORDINATOR_INPUT=./configuration/baptiste_data_locations.toml 
+# THROTTLING
+STRATEGIC_THROTTLING=0
+TACTICAL_THROTTLING=0
+SUPERVISOR_THROTTLING=100
+OPERATIONAL_THROTTLING=150
 
 # Ordinator
 ORDINATOR_API_ADDRESS=127.0.0.1:8090
@@ -25,13 +25,14 @@ PROFILING_LEVEL=error
 TRACING_LEVEL=info
 ORDINATOR_LOG_DIR=./logging/logs/
 
+
+#=================================================================================#
+# THESE SETTINGS ARE NOT ENVIRONMENT VARIABLES, DO NOT CHANGE THEM
 # Configuration
 WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
 RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 
-# THROTTLING
-STRATEGIC_THROTTLING=0
-TACTICAL_THROTTLING=0
-SUPERVISOR_THROTTLING=100
-OPERATIONAL_THROTTLING=150
-
+#DATA
+DATABASE_PATH=./temp_scheduling_environment_database/scheduling_environment.json
+EXCEL_DUMP_DIRECTORY=./xlsx_dumps/
+ORDINATOR_INPUT=./configuration/baptiste_data_locations.toml 
