--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -13,6 +13,7 @@ actix = "*"
 actix-rt = "*"
 actix-web = "*"
 actix-web-actors = "*"
+arc-swap ="*"
 atomic_enum = "*"
 bincode = "*"
 calamine = "*"
